Alterando título de Kubernetes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Docker: criando containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua</li>
-        <li>Kubernetes</li>
+        <li>Kubernetes: formação orquestração de containers</li>
     </ul>
 </body>
 </html>
