--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker: criando containers sem dor de cabeça</li>
-        <li>Ansible</li>
+        <li>Ansible: sua infraestrutura como código</li>
         <li>Integração Contínua</li>
         <li>Kubernetes: formação orquestração de containers</li>
     </ul>
